correccion de ortografia

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         rows="5" placeholder="Ej: Porque amo la magia..."></textarea></label>
             </div>
             <div class="container-submit">
-                <input type="submit" value="Quiero Ingresar a Howarts!">
+                <input type="submit" value="Quiero Ingresar a Howarts!" id="submit">
             </div>
         </form>
     </div>
