--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital@1&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Hogwarts</title>
 </head>
 
 <body>
     <div class="container">
         <header class="header">
-            <h1 id="title">¡Estudiá en <span>Howarts!</span></h1>
+            <h1 id="title">¡Estudiá en <span>Hogwarts!</span></h1>
             <p id="description">Llená el formulario para inscribirte en la escuela Oficial de magia en Howarts</p>
         </header>
         <form action="" id="survey-form">
@@ -59,11 +59,11 @@
                 <label for=""><input type="checkbox" value="transformaciones">Transformaciones</label>
             </div>
             <div class="container-plus">
-                <label for="">¿Por qué querés ingresar a Howarts?: <textarea name="" id="" cols="50"
+                <label for="">¿Por qué querés ingresar a Hogwarts?: <textarea name="" id="" cols="50"
                         rows="5" placeholder="Ej: Porque amo la magia..."></textarea></label>
             </div>
             <div class="container-submit">
-                <input type="submit" value="Quiero Ingresar a Howarts!" id="submit">
+                <input type="submit" value="Quiero Ingresar a Hogwarts!" id="submit">
             </div>
         </form>
     </div>
